# ed25519

./: .gitignore  CMakeLists.txt  README.md
ed25519-lib/: CMakeLists.txt
lib/Windows/Debug/: ed25519.lib  ed25519.pri
test/: test-ticks.h  test.c
